# prom_cafe

./: .env  .gitignore  README.md  analyze_categories.py  check_categories.py  prom_cafe.db  pyproject.toml  render.yaml  requirements.txt  verify_api.py
backend/: clear_db.py  database.py  main.py  models.py  parse_menu.py  schemas.py  seeds.py
frontend/: app.js  index.html
